Melhoria no design e inclusão de redes sociais

--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
         </div>
     </section>    
     
+    <section id="redes">
+        <h2>Minhas Redes</h2>
+        <div class="redes-sociais">
+            <a href="https://instagram.com/SEU_INSTAGRAM" target="_blank">
+                <img src="img/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://tiktok.com/@SEU_TIKTOK" target="_blank">
+                <img src="img/tiktok.png" alt="TikTok">
+            </a>
+            <a href="https://youtube.com/SEU_YOUTUBE" target="_blank">
+                <img src="img/youtube.png" alt="YouTube">
+            </a>
+            <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank">
+                <img src="img/linkedin.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/SEU_GITHUB" target="_blank">
+                <img src="img/github.png" alt="GitHub">
+            </a>
+        </div>
+    </section>
+    
     <section id="contato">
         <h2>Contato</h2>
         <form id="formContato">
@@ -58,3 +79,17 @@
     <script src="script.js"></script>
 </body>
 </html>
+<div class="perfil">
+    <img src="perfil.jpg" alt="Foto de Wemerson">
+</div>
+
+<section id="linguagens">
+    <h2>Linguagens que Domino</h2>
+    <div class="linguagens">
+        <img src="img/python.png" alt="Python">
+        <img src="img/html.png" alt="HTML">
+        <img src="img/css.png" alt="CSS">
+        <img src="img/javascript.png" alt="JavaScript">
+        <img src="img/c.png" alt="C">
+    </div>
+</section>
